[gd_scene load_steps=14 format=3 uid="uid://cmsr3ydtu1vw1"]

[ext_resource type="Script" uid="uid://c17enfthvnqr5" path="res://scripts/pause.gd" id="1_cho5n"]
[ext_resource type="Theme" uid="uid://csd1xt3gyob2q" path="res://assets/presets/theme1.tres" id="2_35g5d"]
[ext_resource type="Texture2D" uid="uid://dijf2bi6a1w2i" path="res://assets/images/ui.png" id="2_gc51q"]
[ext_resource type="FontFile" uid="uid://b14yj6f0tuvtr" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_h04nq"]
[ext_resource type="Shader" uid="uid://cb087n4sb8sq1" path="res://assets/presets/blur.gdshader" id="2_wgkjp"]
[ext_resource type="Texture2D" uid="uid://cmfnnb7gj8i2k" path="res://assets/images/pixil-frame-0 (1).png" id="3_35g5d"]
[ext_resource type="PackedScene" uid="uid://bvih4mru6gyoh" path="res://scenes/UI/settings.tscn" id="5_gc51q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0f636"]
shader = ExtResource("2_wgkjp")
shader_parameter/blur_size = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wgkjp"]
texture = ExtResource("2_gc51q")
region_rect = Rect2(576, 136, 176, 232)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wijuh"]
texture = ExtResource("3_35g5d")
modulate_color = Color(0.753984, 0.753984, 0.753984, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_supq8"]
texture = ExtResource("3_35g5d")
modulate_color = Color(0.355314, 0.355314, 0.355314, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0f636"]
texture = ExtResource("3_35g5d")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wgkjp"]

[node name="Pause" type="CanvasLayer" node_paths=PackedStringArray("settings", "pause_menu")]
process_mode = 3
layer = 2
script = ExtResource("1_cho5n")
settings = NodePath("Settings")
pause_menu = NodePath("Pause_menu")

[node name="Blur" type="ColorRect" parent="."]
process_mode = 3
material = SubResource("ShaderMaterial_0f636")
offset_right = 1280.0
offset_bottom = 720.0

[node name="Pause_menu" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 384.0
offset_top = 64.0
offset_right = -384.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wgkjp")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Pause_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Pause_menu/MarginContainer"]
layout_mode = 2

[node name="Pause_text" type="Label" parent="Pause_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_35g5d")
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Pause_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Resume" type="Button" parent="Pause_menu/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_h04nq")
theme_override_font_sizes/font_size = 23
theme_override_styles/normal = SubResource("StyleBoxTexture_wijuh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_supq8")
theme_override_styles/hover = SubResource("StyleBoxTexture_0f636")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wgkjp")
text = "Resume"

[node name="Restart" type="Button" parent="Pause_menu/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_h04nq")
theme_override_font_sizes/font_size = 23
theme_override_styles/normal = SubResource("StyleBoxTexture_wijuh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_supq8")
theme_override_styles/hover = SubResource("StyleBoxTexture_0f636")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wgkjp")
text = "Restart Level"

[node name="Settings" type="Button" parent="Pause_menu/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_h04nq")
theme_override_font_sizes/font_size = 23
theme_override_styles/normal = SubResource("StyleBoxTexture_wijuh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_supq8")
theme_override_styles/hover = SubResource("StyleBoxTexture_0f636")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wgkjp")
text = "Settings"

[node name="Exit" type="Button" parent="Pause_menu/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_h04nq")
theme_override_font_sizes/font_size = 23
theme_override_styles/normal = SubResource("StyleBoxTexture_wijuh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_supq8")
theme_override_styles/hover = SubResource("StyleBoxTexture_0f636")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wgkjp")
text = "Exit"

[node name="Settings" parent="." node_paths=PackedStringArray("previous_menu") instance=ExtResource("5_gc51q")]
visible = false
offset_top = -296.5
offset_bottom = 296.5
previous_menu = NodePath("../Pause_menu")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Pause_menu/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause_menu/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Pause_menu/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Pause_menu/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
